--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     env_file:
       - .env
+    environment:
+      - POSTGRES_SERVER=db
+      - POSTGRES_PORT=5432
     ports:
       - "8000:8000"
     volumes:
