docs(readme): update readme with seed data and testing info

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,22 @@
+# Environment variables for the application
+ENVIRONMENT=local # local, staging, production
+
+# Application settings
 APP_NAME=Blog FastAPI App
 APP_DESCRIPTION=A simple FastAPI application
 APP_VERSION=0.1.0
 
-SECRET_KEY=mysecretkey
-ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-REFRESH_TOKEN_EXPIRE_DAYS=7
+# Security settings
+SECRET_KEY=mysecretkey          # Secret key for JWT (generate using openssl rand -hex 32)
+ALGORITHM=HS256                 # Algorithm for JWT
+ACCESS_TOKEN_EXPIRE_MINUTES=30  # Access token expiration time in minutes
+REFRESH_TOKEN_EXPIRE_DAYS=7     # Refresh token expiration time in days
 
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_SERVER=localhost
-POSTGRES_PORT=5432
-POSTGRES_DB=mydatabase
-POSTGRES_SYNC_PREFIX=postgresql+psycopg2://
-POSTGRES_ASYNC_PREFIX=postgresql+asyncpg://
-
-ENVIRONMENT=local
+# Database settings
+POSTGRES_USER=postgres                      # Postgres user
+POSTGRES_PASSWORD=postgres                  # Postgres password
+POSTGRES_SERVER=localhost                   # Postgres server/hostname
+POSTGRES_PORT=5432                          # Postgres port
+POSTGRES_DB=mydatabase                      # Postgres database name
+POSTGRES_SYNC_PREFIX=postgresql+psycopg2:// # Postgres sync connection string prefix
+POSTGRES_ASYNC_PREFIX=postgresql+asyncpg:// # Postgres async connection string prefix
