--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,6 @@ services:
       context: .
       dockerfile: Dockerfile
     image: blog-fastapi
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     env_file:
       - .env
     environment:
@@ -16,6 +15,7 @@ services:
       - .:/code
     depends_on:
       - db
+    restart: always
 
   db:
     image: postgres:16
@@ -25,6 +25,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
     ports:
       - "5433:5432"
+    restart: always
 
 volumes:
     postgres-data:
